--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,7 +50,7 @@ jobs:
    - name: Deploy web app
      uses: azure/webapps-deploy@v2
      with:
-       app-name: GitHubApp-@lab.LabInstance.Id
+       app-name: github-yaml-play
        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
        package: webapp
 
