--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,11 +47,13 @@ jobs:
      with:
        name: webapp
        path: webapp
+   - name: Print env variable
+     run: echo "${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}"
    - name: Deploy web app
      uses: azure/webapps-deploy@v2
      with:
        app-name: github-yaml-play
-       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+       publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
        package: webapp
 
   
