--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    environment: PRODUCTION
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
