--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,7 +48,8 @@ jobs:
        name: webapp
        path: webapp
    - name: Print env variable
-     run: echo "${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}"
+     run: |
+          echo "VAR1: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}"
    - name: Deploy web app
      uses: azure/webapps-deploy@v2
      with:
