--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    environment: PRODUCTION
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -49,12 +47,12 @@ jobs:
        path: webapp
    - name: Print env variable
      run: |
-          echo "VAR1: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}"
+          echo "VAR1: ${{ vars.AZURE_WEBAPP_PUBLISH_PROFILE }}"
    - name: Deploy web app
      uses: azure/webapps-deploy@v2
      with:
        app-name: github-yaml-play
-       publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
+       publish-profile: ${{ vars.AZURE_WEBAPP_PUBLISH_PROFILE }}
        package: webapp
 
   
