--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,12 +47,12 @@ jobs:
        path: webapp
    - name: Print env variable
      run: |
-          echo "VAR1: ${{ vars.AZURE_WEBAPP_PUBLISH_PROFILE }}"
+          echo "VAR1: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}"
    - name: Deploy web app
      uses: azure/webapps-deploy@v2
      with:
        app-name: github-yaml-play
-       publish-profile: ${{ vars.AZURE_WEBAPP_PUBLISH_PROFILE }}
+       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
        package: webapp
 
   
